CMAKE_MINIMUM_REQUIRED(VERSION 3.27.0...3.29.6)
# Copyright © 2023~ UNKNOWN STRYKER. All Rights Reserved.
PROJECT(FE_RENDERER
        VERSION 0.0
        DESCRIPTION "An executable Frogman Engine renderer binary"
        LANGUAGES CXX)

INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/../../../Source/CMakeLists/predefined-settings.cmake")
INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/../../../Source/CMakeLists/frogman-engine.cmake")




IF(CMAKE_SYSTEM_NAME STREQUAL "Linux" AND TARGET_CPU_ARCHITECTURE STREQUAL "x86-64")


ELSEIF(CMAKE_SYSTEM_NAME STREQUAL "Windows" AND TARGET_CPU_ARCHITECTURE STREQUAL "x86-64")


ENDIF()


ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
${FE_CORE_SOURCES}
${FE_FRAMEWORK_SOURCES}
${THIRD_PARTY_CITY_HASH}
main.cpp
)


SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})


TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)