SET(TEST_TARGET "FE.core.algorithm.string_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_CORE_ALGORITHM_STRING})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_LOG}
${FE_CORE_MEMORY}
${FE_CORE_ITERATOR}
${FE_CORE_ALGORITHM_MATH}
${FE_CORE_ALGORITHM_STRING}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)