SET(FE.core.algorithm.utility_test "FE.core.algorithm.utility_test")

SOURCE_GROUP("FE.core.algorithm.utility_test" FILES ${FE_CORE_ALGORITHM_UTILITY})

ADD_EXECUTABLE(FE.core.algorithm.utility_test
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
)

ADD_COMPILE_OPTIONS(${FE_CXX_COMMON_COMPILE_OPTIONS})
TARGET_COMPILE_OPTIONS(${FE.core.algorithm.utility_test} PRIVATE
$<$<CONFIG:DEBUG>:			${DEBUG_COMPILE_OPTIONS} 			>
$<$<CONFIG:RELWITHDEBINFO>: ${RELWITHDEBINFO_COMPILE_OPTIONS}	>
$<$<CONFIG:RELEASE>:		${RELEASE_COMPILE_OPTIONS} 			>
$<$<CONFIG:MINSIZEREL>:		${MINSIZEREL_COMPILE_OPTIONS} 		>
)