SET(FE.core.log_test "FE.core.log_test")

SOURCE_GROUP("FE.core.log_test" FILES ${FE_CORE_LOG})

ADD_EXECUTABLE(FE.core.log_test 
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
)

ADD_COMPILE_OPTIONS(${FE_CXX_COMMON_COMPILE_OPTIONS})
TARGET_COMPILE_OPTIONS(${FE.core.log_test} PRIVATE
$<$<CONFIG:DEBUG>:			${DEBUG_COMPILE_OPTIONS} 	        >
$<$<CONFIG:RELWITHDEBINFO>: ${RELWITHDEBINFO_COMPILE_OPTIONS}	>
$<$<CONFIG:RELEASE>:		${RELEASE_COMPILE_OPTIONS} 			>
$<$<CONFIG:MINSIZEREL>:		${MINSIZEREL_COMPILE_OPTIONS} 		>
)

TARGET_LINK_LIBRARIES(${FE.core.log_test}
    ${BOOST_STACKTRACE}
    ${BOOST_CHRONO}
)