SET(TEST_TARGET "FE.core.log_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_CORE_LOG})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET}
    ${BOOST_STACKTRACE}
    ${BOOST_CHRONO}
)