SET(TEST_TARGET "FE.core.memory_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_CORE_MEMORY})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
${FE_CORE_MEMORY}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)