SET(FE.core.prerequisites_test "FE.core.prerequisites_test")

SOURCE_GROUP("FE.core.prerequisites" FILES ${FE_CORE_PREREQUISITES})

ADD_EXECUTABLE(FE.core.prerequisites_test 
main.cpp
${FE_CORE_PREREQUISITES}
)

ADD_COMPILE_OPTIONS(${FE_CXX_COMMON_COMPILE_OPTIONS})
TARGET_COMPILE_OPTIONS(${FE.core.prerequisites_test} PRIVATE
$<$<CONFIG:DEBUG>:			${DEBUG_COMPILE_OPTIONS} 			>
$<$<CONFIG:RELWITHDEBINFO>: ${RELWITHDEBINFO_COMPILE_OPTIONS}	>
$<$<CONFIG:RELEASE>:		${RELEASE_COMPILE_OPTIONS} 			>
$<$<CONFIG:MINSIZEREL>:		${MINSIZEREL_COMPILE_OPTIONS} 		>
)