SET(TEST_TARGET "FE.core.string_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_CORE_STRING})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
${FE_CORE_POOL}
${FE_CORE_SMART_PTRS}
${FE_CORE_STRING}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)