SET(TEST_TARGET "FE.core.string_view_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_CORE_STRING_VIEW})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${THIRD_PARTY_CITY_HASH} 
${THIRD_PARTY_ROBIN_HOOD_HASH}
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
${FE_CORE_POOL}
${FE_CORE_SMART_PTRS}
${FE_CORE_STRING_VIEW}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)