SET(FE.core.type_traits_test "FE.core.type_traits_test")

SOURCE_GROUP("FE.core.type_traits" FILES ${FE_CORE_TYPE_TRAITS})

ADD_EXECUTABLE(FE.core.type_traits_test 
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
)

ADD_COMPILE_OPTIONS(${FE_CXX_COMMON_COMPILE_OPTIONS})
TARGET_COMPILE_OPTIONS(${FE.core.type_traits_test} PRIVATE
$<$<CONFIG:DEBUG>:			${DEBUG_COMPILE_OPTIONS} 			>
$<$<CONFIG:RELWITHDEBINFO>: ${RELWITHDEBINFO_COMPILE_OPTIONS}	>
$<$<CONFIG:RELEASE>:		${RELEASE_COMPILE_OPTIONS} 			>
$<$<CONFIG:MINSIZEREL>:		${MINSIZEREL_COMPILE_OPTIONS} 		>
)