SET(TEST_TARGET "FE.core.type_traits_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_CORE_TYPE_TRAITS})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)