SET(TEST_TARGET "FE.framework.predefined_main_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_FRAMEWORK_PREDEFINED_MAIN})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
${FE_FRAMEWORK_PREDEFINED_MAIN}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET}
    ${BOOST_STACKTRACE}
    ${BOOST_CHRONO}
)