SET(TEST_TARGET "FE.framework.predefined_main_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_FRAMEWORK_PREDEFINED_MAIN})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${THIRD_PARTY_CITY_HASH} 
${THIRD_PARTY_ROBIN_HOOD_HASH}
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_LOG}
${FE_FRAMEWORK_REFLECTION}
${FE_CORE_MANAGED}
${FE_FRAMEWORK_PREDEFINED_MAIN}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)