SET(TEST_TARGET "FE.framework.reflection_test")

SOURCE_GROUP("${TEST_TARGET}" FILES ${FE_FRAMEWORK_REFLECTION})


ADD_EXECUTABLE(${TEST_TARGET}
main.cpp
${THIRD_PARTY_CITY_HASH} 
${THIRD_PARTY_ROBIN_HOOD_HASH}
${FE_CORE_PREREQUISITES}
${FE_CORE_TYPE_TRAITS}
${FE_CORE_ALGORITHM_UTILITY}
${FE_CORE_HASH}
${FE_CORE_THREAD}
${FE_CORE_ALGORITHM_MATH}
${FE_CORE_MEMORY}
${FE_CORE_ALGORITHM_STRING}
${FE_CORE_LOG}
${FE_CORE_POOL}
${FE_CORE_SMART_PTRS}
${FE_CORE_STRING}
${FE_FRAMEWORK_REFLECTION}
)


TARGET_LINK_LIBRARIES(${TEST_TARGET} 
${BOOST_STACKTRACE} 
${BOOST_CHRONO} 
${UNIT_TEST} 
${BENCHMARK_TEST}
)